--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,9 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md",  title:"Home"}
-  - {file: "README.md", title:"About"}
   - {file: "Blog.html", title:"Blog"}
+  - {file: "index2.md", title:"个人主页"}
+  - {file: "Blog2.html", title:"博客"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:21xuanhao.cao@gmail.com"}
