--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal: false             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index_en.md",  title:"Home"}
   - {file: "Blog.html", title:"Blog"}
-  - {file: "index_zh.md", title:"个人主页"}
+  - {file: "index_zh.md", title:"CV"}
   - {file: "Blog_zh.md", title:"博客"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
