--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Xuanhao Cao"
 author: "Xuanhao Cao"
-description: "M.Sc ML @ Uni Tuebingen"
+description: "M.Sc. ML @ Uni Tuebingen"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
