--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
 
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Email, icon: envelope, url: "mailto:21xuanhao.cao@gmail.com"}
+  - {title: Email, icon: envelope, url: "mailto:908168202@qq.com"}
   - {title: Github, icon: github, url: "https://github.com/CaoXuanHao0"}
   - {title: Linkedin, icon: linkedin, url: "https://linkedin.com/in/xuanhao-cao-b22976242"}
 
