--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
 
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
+  - {title: My Chinese Blog, icon: file-export, url: "https://www.zhihu.com/column/c_1613444881854255104"}
   - {title: Email, icon: envelope, url: "mailto:21xuanhao.cao@gmail.com"}
   - {title: Github, icon: github, url: "https://github.com/CaoXuanHao0"}
   - {title: Linkedin, icon: linkedin, url: "https://linkedin.com/in/xuanhao-cao-b22976242"}
