--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.md",  title:"Home", icon:home}
+  - {file: "index.md",  icon: universal-access, title:"Home", icon:home}
   - {file: "Blog.html", icon:files , title:"Blog"}
 
 
