--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md",  icon: universal-access, title:"Home", icon:home}
-  - {file: "Blog.html", icon:file , title:"Blog"}
+  - {file: "Blog.html", icon: files , title:"Blog"}
 
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
